# H7ThreadX

./: .clang-format  .cproject  .mxproject  .project  CMakeLists.txt  H7ThreadX Debug.launch  H7ThreadX.ioc  README.md  TODO.md
.github/workflows/: cmake.yaml
AZURE_RTOS/: CMakeLists.txt
AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos_config.h  application.hpp
Config/: CMakeLists.txt
Core/: CMakeLists.txt
Core/Inc/: RTE_Components.h  adc.h  dfsdm.h  fmc.h  i2c.h  main.h  stm32h7xx_hal_conf.h  usb_otg.h
Core/Src/: adc.c  app_threadx.cpp  dfsdm.c  eth.c  fmc.c  gpio.c  i2c.c  ltdc.c  main.c  quadspi.c  sai.c  sdmmc.c  stm32h7xx_hal_msp.c  usart.c  usb_otg.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/STM32H7xx_HAL_Driver/: CMakeLists.txt
FileX/: CMakeLists.txt
FileX/App/: app_filex.c  app_filex.h
Middlewares/ST/: CMakeLists.txt
Middlewares/ST/filex/: CMakeLists.txt
Middlewares/ST/threadx/: CMakeLists.txt
apps/sandbox/: CMakeLists.txt  sandbox.cpp
cmake/: st-project.cmake
foundation/: Application.hpp  CMakeLists.txt  HAL.cpp  HAL.hpp  Mutex.hpp  Runtime.cpp  Runtime.hpp  Thread.hpp
foundation/FixedString/: FixedString.hpp
launch/: launch.json  launch.vs.json
