project(filex)

add_library(${PROJECT_NAME} STATIC)

target_compile_definitions(
    ${PROJECT_NAME} PRIVATE

)

target_sources(${PROJECT_NAME}
PUBLIC
    common/drivers/fx_stm32_sd_driver.c
    common/drivers/fx_stm32_sram_driver.c
    common/src/fx_directory_attributes_read.c
    common/src/fx_directory_attributes_set.c
    common/src/fx_directory_create.c
    common/src/fx_directory_default_get.c
    common/src/fx_directory_default_get_copy.c
    common/src/fx_directory_default_set.c
    common/src/fx_directory_delete.c
    common/src/fx_directory_entry_read.c
    common/src/fx_directory_entry_write.c
    common/src/fx_directory_exFAT_entry_read.c
    common/src/fx_directory_exFAT_entry_write.c
    common/src/fx_directory_exFAT_free_search.c
    common/src/fx_directory_exFAT_unicode_entry_write.c
    common/src/fx_directory_first_entry_find.c
    common/src/fx_directory_first_full_entry_find.c
    common/src/fx_directory_free_search.c
    common/src/fx_directory_information_get.c
    common/src/fx_directory_local_path_clear.c
    common/src/fx_directory_local_path_get.c
    common/src/fx_directory_local_path_get_copy.c
    common/src/fx_directory_local_path_restore.c
    common/src/fx_directory_local_path_set.c
    common/src/fx_directory_long_name_get.c
    common/src/fx_directory_long_name_get_extended.c
    common/src/fx_directory_name_extract.c
    common/src/fx_directory_name_test.c
    common/src/fx_directory_next_entry_find.c
    common/src/fx_directory_next_full_entry_find.c
    common/src/fx_directory_rename.c
    common/src/fx_directory_search.c
    common/src/fx_directory_short_name_get.c
    common/src/fx_directory_short_name_get_extended.c
    common/src/fx_fault_tolerant_add_bitmap_log.c
    common/src/fx_fault_tolerant_add_checksum_log.c
    common/src/fx_fault_tolerant_add_dir_log.c
    common/src/fx_fault_tolerant_add_FAT_log.c
    common/src/fx_fault_tolerant_apply_logs.c
    common/src/fx_fault_tolerant_calculate_checksum.c
    common/src/fx_fault_tolerant_cleanup_FAT_chain.c
    common/src/fx_fault_tolerant_create_log_file.c
    common/src/fx_fault_tolerant_enable.c
    common/src/fx_fault_tolerant_read_directory_sector.c
    common/src/fx_fault_tolerant_read_FAT.c
    common/src/fx_fault_tolerant_read_log_file.c
    common/src/fx_fault_tolerant_recover.c
    common/src/fx_fault_tolerant_reset_log_file.c
    common/src/fx_fault_tolerant_set_FAT_chain.c
    common/src/fx_fault_tolerant_transaction_end.c
    common/src/fx_fault_tolerant_transaction_fail.c
    common/src/fx_fault_tolerant_transaction_start.c
    common/src/fx_fault_tolerant_write_log_file.c
    common/src/fx_file_allocate.c
    common/src/fx_file_attributes_read.c
    common/src/fx_file_attributes_set.c
    common/src/fx_file_best_effort_allocate.c
    common/src/fx_file_close.c
    common/src/fx_file_create.c
    common/src/fx_file_date_time_set.c
    common/src/fx_file_delete.c
    common/src/fx_file_extended_allocate.c
    common/src/fx_file_extended_best_effort_allocate.c
    common/src/fx_file_extended_relative_seek.c
    common/src/fx_file_extended_seek.c
    common/src/fx_file_extended_truncate.c
    common/src/fx_file_extended_truncate_release.c
    common/src/fx_file_open.c
    common/src/fx_file_read.c
    common/src/fx_file_relative_seek.c
    common/src/fx_file_rename.c
    common/src/fx_file_seek.c
    common/src/fx_file_truncate.c
    common/src/fx_file_truncate_release.c
    common/src/fx_file_write.c
    common/src/fx_file_write_notify_set.c
    common/src/fx_media_abort.c
    common/src/fx_media_boot_info_extract.c
    common/src/fx_media_cache_invalidate.c
    common/src/fx_media_check.c
    common/src/fx_media_check_FAT_chain_check.c
    common/src/fx_media_check_lost_cluster_check.c
    common/src/fx_media_close.c
    common/src/fx_media_close_notify_set.c
    common/src/fx_media_exFAT_format.c
    common/src/fx_media_extended_space_available.c
    common/src/fx_media_flush.c
    common/src/fx_media_format.c
    common/src/fx_media_format_oem_name_set.c
    common/src/fx_media_format_type_set.c
    common/src/fx_media_format_volume_id_set.c
    common/src/fx_media_open.c
    common/src/fx_media_open_notify_set.c
    common/src/fx_media_read.c
    common/src/fx_media_space_available.c
    common/src/fx_media_volume_get.c
    common/src/fx_media_volume_get_extended.c
    common/src/fx_media_volume_set.c
    common/src/fx_media_write.c
    common/src/fx_partition_offset_calculate.c
    common/src/fx_system_date_get.c
    common/src/fx_system_date_set.c
    common/src/fx_system_initialize.c
    common/src/fx_system_time_get.c
    common/src/fx_system_time_set.c
    common/src/fx_system_timer_entry.c
    common/src/fx_unicode_directory_create.c
    common/src/fx_unicode_directory_entry_change.c
    common/src/fx_unicode_directory_entry_read.c
    common/src/fx_unicode_directory_rename.c
    common/src/fx_unicode_directory_search.c
    common/src/fx_unicode_file_create.c
    common/src/fx_unicode_file_rename.c
    common/src/fx_unicode_length_get.c
    common/src/fx_unicode_length_get_extended.c
    common/src/fx_unicode_name_get.c
    common/src/fx_unicode_name_get_extended.c
    common/src/fx_unicode_short_name_get.c
    common/src/fx_unicode_short_name_get_extended.c
    common/src/fx_utility_16_unsigned_read.c
    common/src/fx_utility_16_unsigned_write.c
    common/src/fx_utility_32_unsigned_read.c
    common/src/fx_utility_32_unsigned_write.c
    common/src/fx_utility_64_unsigned_read.c
    common/src/fx_utility_64_unsigned_write.c
    common/src/fx_utility_absolute_path_get.c
    common/src/fx_utility_exFAT_allocate_new_cluster.c
    common/src/fx_utility_exFAT_bitmap_cache_prepare.c
    common/src/fx_utility_exFAT_bitmap_cache_update.c
    common/src/fx_utility_exFAT_bitmap_flush.c
    common/src/fx_utility_exFAT_bitmap_free_cluster_find.c
    common/src/fx_utility_exFAT_bitmap_initialize.c
    common/src/fx_utility_exFAT_bitmap_start_sector_get.c
    common/src/fx_utility_exFAT_cluster_free.c
    common/src/fx_utility_exFAT_cluster_state_get.c
    common/src/fx_utility_exFAT_cluster_state_set.c
    common/src/fx_utility_exFAT_geometry_check.c
    common/src/fx_utility_exFAT_name_hash_get.c
    common/src/fx_utility_exFAT_size_calculate.c
    common/src/fx_utility_exFAT_system_area_checksum_verify.c
    common/src/fx_utility_exFAT_system_area_checksum_write.c
    common/src/fx_utility_exFAT_system_area_format.c
    common/src/fx_utility_exFAT_system_sector_write.c
    common/src/fx_utility_exFAT_unicode_name_hash_get.c
    common/src/fx_utility_exFAT_upcase_table.c
    common/src/fx_utility_FAT_entry_read.c
    common/src/fx_utility_FAT_entry_write.c
    common/src/fx_utility_FAT_flush.c
    common/src/fx_utility_FAT_map_flush.c
    common/src/fx_utility_FAT_sector_get.c
    common/src/fx_utility_logical_sector_cache_entry_read.c
    common/src/fx_utility_logical_sector_flush.c
    common/src/fx_utility_logical_sector_read.c
    common/src/fx_utility_logical_sector_write.c
    common/src/fx_utility_memory_copy.c
    common/src/fx_utility_memory_set.c
    common/src/fx_utility_string_length_get.c
    common/src/fx_utility_token_length_get.c
    common/src/fxe_directory_attributes_read.c
    common/src/fxe_directory_attributes_set.c
    common/src/fxe_directory_create.c
    common/src/fxe_directory_default_get.c
    common/src/fxe_directory_default_get_copy.c
    common/src/fxe_directory_default_set.c
    common/src/fxe_directory_delete.c
    common/src/fxe_directory_first_entry_find.c
    common/src/fxe_directory_first_full_entry_find.c
    common/src/fxe_directory_information_get.c
    common/src/fxe_directory_local_path_clear.c
    common/src/fxe_directory_local_path_get.c
    common/src/fxe_directory_local_path_get_copy.c
    common/src/fxe_directory_local_path_restore.c
    common/src/fxe_directory_local_path_set.c
    common/src/fxe_directory_long_name_get.c
    common/src/fxe_directory_long_name_get_extended.c
    common/src/fxe_directory_name_test.c
    common/src/fxe_directory_next_entry_find.c
    common/src/fxe_directory_next_full_entry_find.c
    common/src/fxe_directory_rename.c
    common/src/fxe_directory_short_name_get.c
    common/src/fxe_directory_short_name_get_extended.c
    common/src/fxe_fault_tolerant_enable.c
    common/src/fxe_file_allocate.c
    common/src/fxe_file_attributes_read.c
    common/src/fxe_file_attributes_set.c
    common/src/fxe_file_best_effort_allocate.c
    common/src/fxe_file_close.c
    common/src/fxe_file_create.c
    common/src/fxe_file_date_time_set.c
    common/src/fxe_file_delete.c
    common/src/fxe_file_extended_allocate.c
    common/src/fxe_file_extended_best_effort_allocate.c
    common/src/fxe_file_extended_relative_seek.c
    common/src/fxe_file_extended_seek.c
    common/src/fxe_file_extended_truncate.c
    common/src/fxe_file_extended_truncate_release.c
    common/src/fxe_file_open.c
    common/src/fxe_file_read.c
    common/src/fxe_file_relative_seek.c
    common/src/fxe_file_rename.c
    common/src/fxe_file_seek.c
    common/src/fxe_file_truncate.c
    common/src/fxe_file_truncate_release.c
    common/src/fxe_file_write.c
    common/src/fxe_file_write_notify_set.c
    common/src/fxe_media_abort.c
    common/src/fxe_media_cache_invalidate.c
    common/src/fxe_media_check.c
    common/src/fxe_media_close.c
    common/src/fxe_media_close_notify_set.c
    common/src/fxe_media_exFAT_format.c
    common/src/fxe_media_extended_space_available.c
    common/src/fxe_media_flush.c
    common/src/fxe_media_format.c
    common/src/fxe_media_open.c
    common/src/fxe_media_open_notify_set.c
    common/src/fxe_media_read.c
    common/src/fxe_media_space_available.c
    common/src/fxe_media_volume_get.c
    common/src/fxe_media_volume_get_extended.c
    common/src/fxe_media_volume_set.c
    common/src/fxe_media_write.c
    common/src/fxe_system_date_get.c
    common/src/fxe_system_date_set.c
    common/src/fxe_system_time_get.c
    common/src/fxe_system_time_set.c
    common/src/fxe_unicode_directory_create.c
    common/src/fxe_unicode_directory_rename.c
    common/src/fxe_unicode_file_create.c
    common/src/fxe_unicode_file_rename.c
    common/src/fxe_unicode_name_get.c
    common/src/fxe_unicode_name_get_extended.c
    common/src/fxe_unicode_short_name_get.c
    common/src/fxe_unicode_short_name_get_extended.c
)

target_include_directories(${PROJECT_NAME}
PUBLIC
    "${PROJECT_SOURCE_DIR}/common/inc"
    "${PROJECT_SOURCE_DIR}/common/drivers"
    "${PROJECT_SOURCE_DIR}/ports/generic/inc"
)

target_compile_options(
    ${PROJECT_NAME} PRIVATE
    "-mcpu=cortex-m7"
    "-mfpu=fpv5-d16"
    "-mfloat-abi=hard"
)


target_compile_definitions(
    ${PROJECT_NAME} PRIVATE
    "$<$<CONFIG:Debug>:DEBUG>"
    "STM32H743xx"
)

target_link_options(
    ${PROJECT_NAME} PRIVATE
)

target_link_libraries(${PROJECT_NAME} PRIVATE Config threadx hal CMSIS filex_driver)